--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -63,5 +63,9 @@
     "experience_hockey_female_sport": "Damen-Hockey",
     "experience_hockey_female_country": "Vereinigtes Königreich",
     "experience_hockey_female_story": "Was hatten wir für einen Spaß! Es war eine Mischung aus Wettkampf, Sightseeing und Lachen zu jeder Zeit. Wir hatten spannende, aber sehr unterhaltsame Spiele, und abseits des Feldes war die Betreuung tadellos. Alles, was man braucht, wenn man mit einer Gruppe von Frauen über 40 reist: gutes Essen, bequeme Betten und ein Plan, um am Ende des Tages anzustoßen. Es wurde von Leuten organisiert, die unsere Sprache sprechen (die des Sports, natürlich). Wir planen schon neue Trikots... denn wir kommen bestimmt wieder. Danke, dass ihr uns gleichzeitig als Spielerinnen, Freundinnen und Reisende behandelt habt!",
-    "experience_hockey_female_name": "Sophie M., London Ladies HC"
+    "experience_hockey_female_name": "Sophie M., London Ladies HC",
+    "counters_teamsTrustedUs": "Teams, die uns vertraut haben",
+  "counters_playersImpacted": "Beeinflusste Spieler",
+  "counters_queriesAnswered": "Beantwortete Anfragen",
+  "counters_countriesReached": "Erreichte Länder"
   }
