--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,73 +1,77 @@
 {
-    "welcome": "Welcome",
-    "contact_title": "Contact",
-    "contact_subtitle": "Contact us",
-    "contact_description": "Fill out the form and our team will respond within 24 hours.",
-    "contact_name": "Name",
-    "contact_lastname": "Last name",
-    "contact_email": "Email",
-    "contact_phone": "Phone",
-    "contact_message": "Message",
-    "contact_message_placeholder": "Write your message here",
-    "contact_send": "Send",
-    "services_title": "Services",
-    "process_title": "Process",
-    "slide1_text": "We design unique sports experiences for teams that keep playing with passion.",
-    "slide2_text": "Travel, compete, and live the sport like a legend.",
-    "slide3_text": "Discover new horizons and challenge your limits.",
-    "slide4_text": "Conquer the field and leave your mark in history.",
-    "service_accommodation": "Accommodation",
-    "service_accommodation_desc": "Comfortable rooms for your team",
-    "service_accommodation_descLong": "Our accommodation service offers modern, comfortable rooms designed specifically for sports teams. Enjoy spacious living areas, high-speed Wi-Fi, nutritious meal options, and easy access to training facilities. We ensure a restful environment so your team can focus on performance and recovery.",
-    "service_transport": "Transport",
-    "service_transport_desc": "Safe and timely transfers",
-    "service_transport_descLong": "We provide safe and timely transfers with our fleet of modern buses and vans. Our experienced drivers ensure your team arrives punctually to every match, training session, or event. All vehicles are equipped with air conditioning, ample storage for equipment, and comfortable seating for long journeys.",
-    "service_matches": "Matches",
-    "service_matches_desc": "Compete with international teams",
-    "service_matches_descLong": "Participate in friendly and competitive matches against local and international teams. We organize fixtures tailored to your team's level and objectives, including referees, official fields, and post-match analysis. Experience the thrill of international competition and build lasting sports relationships.",
-    "service_training": "Training",
-    "service_training_desc": "Guided sessions by professionals",
-    "service_training_descLong": "Our training sessions are led by professional coaches and tailored to your team's needs. Access top-quality facilities, personalized programs, and the latest sports technology. Improve your skills, tactics, and team cohesion with expert guidance and a motivating environment.",
-    "service_tours": "Tours",
-    "service_tours_desc": "Discover the city and culture",
-    "service_tours_descLong": "Discover the city and its culture with our guided tours. Explore historical landmarks, enjoy local cuisine, and experience the vibrant atmosphere of Valencia. Our tours are designed to offer relaxation and cultural enrichment between your sporting commitments.",
-    "service_other": "Other",
-    "service_other_desc": "Additional services for your comfort",
-    "service_other_descLong": "We offer a range of additional services to enhance your stay, including medical assistance, laundry, equipment rental, and 24/7 support. Our team is dedicated to ensuring your comfort and meeting any special requirements your group may have during your sports trip.",
-    "hero_title": "SPORTS TOURISM IN VALENCIA",
-    "hero_subtitle": "VETERAN RUGBY & HOCKEY EXPERIENCES",
-    "hero_description": "We design unique sports experiences for veteran teams in the Valencian Community and Costa del Sol. Travel, enjoy, and live the sport like a legend.",
-    "how_we_work": "How we work",
-    "experiences": "Experiences",
-    "howwework_contact": "Contact",
-    "howwework_contact_desc": "Get in touch with us",
-    "howwework_design": "Design the Trip",
-    "howwework_design_desc": "We plan your perfect experience",
-    "howwework_arrival": "Arrival",
-    "howwework_arrival_desc": "Welcome and start your adventure",
-    "howwework_celebration": "Celebration",
-    "howwework_celebration_desc": "Enjoy the game and the party",
-    "howwework_play": "Play",
-    "howwework_play_desc": "Play with the best teams",
-    "footer_description": "Specialists in sports tourism for veteran rugby and hockey teams in the Valencian Community and Costa del Sol.",
-    "footer_quick_links": "Quick Links",
-    "footer_contact": "Contact",
-    "footer_rights": "All rights reserved.",
-    "contact_success": "Your message has been sent successfully.",
-    "contact_error": "An error occurred. Please try again.",
-    "experience_rugby_team": "Valencia Veterans RFC",
-    "experience_rugby_sport": "Rugby",
-    "experience_rugby_country": "Spain",
-    "experience_rugby_story": "We went for the tournament... and came back with stitches from laughing so much. The organization was impeccable: from the first email to the last beer. It's clear that the people behind it understand rugby, what a third time is really like, and what we veterans need to enjoy without pressure. We played intense but not crazy games, ate like kings, and the hotel even had space to stretch after the matches (although some of us used it for naps). We'd go back with our eyes closed. Oh, and we won the prize for the team with the most time on the bar. Well deserved.",
-    "experience_rugby_name": "Carlos “Chino” R., captain of Valencia Veterans RFC",
-    "experience_hockey_male_team": "Amsterdam HC",
-    "experience_hockey_male_sport": "Hockey Masculino",
-    "experience_hockey_male_country": "Netherlands",
-    "experience_hockey_male_story": "We weren't sure if we'd run more on the field or in bars. In the end, we did both. It was a spectacular trip, everything measured to the detail but with flexibility. The organizers were people from the sport, you can tell: they understand our rhythms, our jokes, and our injuries. The tournament had level, but without pressure. We met teams from half of Europe, and ended up dancing with them in a winery by the sea. A luxury! We're already asking for the edition next year. Hopefully we can repeat with the same team.",
-    "experience_hockey_male_name": "Jeroen V., veteran goalkeeper of Amsterdam HC",
-    "experience_hockey_female_team": "London Ladies HC",
-    "experience_hockey_female_sport": "Hockey Femenino",
-    "experience_hockey_female_country": "Reino Unido",
-    "experience_hockey_female_story": "We had a great time! It was a mix of competition, tourism, and laughter at any time. We had intense but very funny games, and outside the field the attention was impeccable. Everything you need when traveling with a group of women +40: good food, comfortable beds, and some plan to toast at the end of the day. Organized by people who speak our same language (the sport language, of course). We're already organizing new jerseys... because we're sure we'll go back. Thank you for treating us as players, friends, and travelers at the same time!",
-    "experience_hockey_female_name": "Sophie M., London Ladies HC"
-  }
+  "welcome": "Welcome",
+  "contact_title": "Contact",
+  "contact_subtitle": "Contact us",
+  "contact_description": "Fill out the form and our team will respond within 24 hours.",
+  "contact_name": "Name",
+  "contact_lastname": "Last name",
+  "contact_email": "Email",
+  "contact_phone": "Phone",
+  "contact_message": "Message",
+  "contact_message_placeholder": "Write your message here",
+  "contact_send": "Send",
+  "services_title": "Services",
+  "process_title": "Process",
+  "slide1_text": "We design unique sports experiences for teams that keep playing with passion.",
+  "slide2_text": "Travel, compete, and live the sport like a legend.",
+  "slide3_text": "Discover new horizons and challenge your limits.",
+  "slide4_text": "Conquer the field and leave your mark in history.",
+  "service_accommodation": "Accommodation",
+  "service_accommodation_desc": "Comfortable rooms for your team",
+  "service_accommodation_descLong": "Our accommodation service offers modern, comfortable rooms designed specifically for sports teams. Enjoy spacious living areas, high-speed Wi-Fi, nutritious meal options, and easy access to training facilities. We ensure a restful environment so your team can focus on performance and recovery.",
+  "service_transport": "Transport",
+  "service_transport_desc": "Safe and timely transfers",
+  "service_transport_descLong": "We provide safe and timely transfers with our fleet of modern buses and vans. Our experienced drivers ensure your team arrives punctually to every match, training session, or event. All vehicles are equipped with air conditioning, ample storage for equipment, and comfortable seating for long journeys.",
+  "service_matches": "Matches",
+  "service_matches_desc": "Compete with international teams",
+  "service_matches_descLong": "Participate in friendly and competitive matches against local and international teams. We organize fixtures tailored to your team's level and objectives, including referees, official fields, and post-match analysis. Experience the thrill of international competition and build lasting sports relationships.",
+  "service_training": "Training",
+  "service_training_desc": "Guided sessions by professionals",
+  "service_training_descLong": "Our training sessions are led by professional coaches and tailored to your team's needs. Access top-quality facilities, personalized programs, and the latest sports technology. Improve your skills, tactics, and team cohesion with expert guidance and a motivating environment.",
+  "service_tours": "Tours",
+  "service_tours_desc": "Discover the city and culture",
+  "service_tours_descLong": "Discover the city and its culture with our guided tours. Explore historical landmarks, enjoy local cuisine, and experience the vibrant atmosphere of Valencia. Our tours are designed to offer relaxation and cultural enrichment between your sporting commitments.",
+  "service_other": "Other",
+  "service_other_desc": "Additional services for your comfort",
+  "service_other_descLong": "We offer a range of additional services to enhance your stay, including medical assistance, laundry, equipment rental, and 24/7 support. Our team is dedicated to ensuring your comfort and meeting any special requirements your group may have during your sports trip.",
+  "hero_title": "SPORTS TOURISM IN VALENCIA",
+  "hero_subtitle": "VETERAN RUGBY & HOCKEY EXPERIENCES",
+  "hero_description": "We design unique sports experiences for veteran teams in the Valencian Community and Costa del Sol. Travel, enjoy, and live the sport like a legend.",
+  "how_we_work": "How we work",
+  "experiences": "Experiences",
+  "howwework_contact": "Contact",
+  "howwework_contact_desc": "Get in touch with us",
+  "howwework_design": "Design the Trip",
+  "howwework_design_desc": "We plan your perfect experience",
+  "howwework_arrival": "Arrival",
+  "howwework_arrival_desc": "Welcome and start your adventure",
+  "howwework_celebration": "Celebration",
+  "howwework_celebration_desc": "Enjoy the game and the party",
+  "howwework_play": "Play",
+  "howwework_play_desc": "Play with the best teams",
+  "footer_description": "Specialists in sports tourism for veteran rugby and hockey teams in the Valencian Community and Costa del Sol.",
+  "footer_quick_links": "Quick Links",
+  "footer_contact": "Contact",
+  "footer_rights": "All rights reserved.",
+  "contact_success": "Your message has been sent successfully.",
+  "contact_error": "An error occurred. Please try again.",
+  "experience_rugby_team": "Valencia Veterans RFC",
+  "experience_rugby_sport": "Rugby",
+  "experience_rugby_country": "Spain",
+  "experience_rugby_story": "We went for the tournament... and came back with stitches from laughing so much. The organization was impeccable: from the first email to the last beer. It's clear that the people behind it understand rugby, what a third time is really like, and what we veterans need to enjoy without pressure. We played intense but not crazy games, ate like kings, and the hotel even had space to stretch after the matches (although some of us used it for naps). We'd go back with our eyes closed. Oh, and we won the prize for the team with the most time on the bar. Well deserved.",
+  "experience_rugby_name": "Carlos “Chino” R., captain of Valencia Veterans RFC",
+  "experience_hockey_male_team": "Amsterdam HC",
+  "experience_hockey_male_sport": "Hockey Masculino",
+  "experience_hockey_male_country": "Netherlands",
+  "experience_hockey_male_story": "We weren't sure if we'd run more on the field or in bars. In the end, we did both. It was a spectacular trip, everything measured to the detail but with flexibility. The organizers were people from the sport, you can tell: they understand our rhythms, our jokes, and our injuries. The tournament had level, but without pressure. We met teams from half of Europe, and ended up dancing with them in a winery by the sea. A luxury! We're already asking for the edition next year. Hopefully we can repeat with the same team.",
+  "experience_hockey_male_name": "Jeroen V., veteran goalkeeper of Amsterdam HC",
+  "experience_hockey_female_team": "London Ladies HC",
+  "experience_hockey_female_sport": "Hockey Femenino",
+  "experience_hockey_female_country": "Reino Unido",
+  "experience_hockey_female_story": "We had a great time! It was a mix of competition, tourism, and laughter at any time. We had intense but very funny games, and outside the field the attention was impeccable. Everything you need when traveling with a group of women +40: good food, comfortable beds, and some plan to toast at the end of the day. Organized by people who speak our same language (the sport language, of course). We're already organizing new jerseys... because we're sure we'll go back. Thank you for treating us as players, friends, and travelers at the same time!",
+  "experience_hockey_female_name": "Sophie M., London Ladies HC",
+  "counters_teamsTrustedUs": "Teams that trusted us",
+  "counters_playersImpacted": "Players impacted",
+  "counters_queriesAnswered": "Queries answered",
+  "counters_countriesReached": "Countries reached"
+}
