--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -69,5 +69,9 @@
   "experience_hockey_female_sport": "Hockey Femenino",
   "experience_hockey_female_country": "Reino Unido",
   "experience_hockey_female_story": "¡Qué bien nos lo pasamos! Fue una mezcla de competición, turismo y risas a cualquier hora. Tuvimos partidos reñidos pero muy divertidos, y fuera del campo la atención fue impecable. Todo lo que necesitás cuando viajás con un grupo de mujeres +40: buena comida, camas cómodas y algún plan para brindar al final del día. Lo organizó gente que habla nuestro mismo idioma (el del deporte, claro). Ya estamos organizando camisetas nuevas... porque seguro volvemos. ¡Gracias por tratarnos como jugadoras, amigas y viajeras a la vez!",
-  "experience_hockey_female_name": "Sophie M., London Ladies HC"
+  "experience_hockey_female_name": "Sophie M., London Ladies HC",
+  "counters_teamsTrustedUs": "Equipos que confiaron en nosotros",
+  "counters_playersImpacted": "Jugadores impactados",
+  "counters_queriesAnswered": "Consultas respondidas",
+  "counters_countriesReached": "Países alcanzados"
 }
