--- a/src/locales/fr/translation.json
+++ b/src/locales/fr/translation.json
@@ -69,5 +69,9 @@
     "experience_hockey_female_sport": "Hockey Féminin",
     "experience_hockey_female_country": "Royaume-Uni",
     "experience_hockey_female_story": "Qu'est-ce qu'on s'est amusées ! C'était un mélange de compétition, de tourisme et de rires à toute heure. Nous avons eu des matchs disputés mais très amusants, et en dehors du terrain, l'attention était impeccable. Tout ce qu'il faut quand on voyage avec un groupe de femmes de plus de 40 ans : bonne nourriture, lits confortables et un plan pour trinquer à la fin de la journée. L'organisation était assurée par des gens qui parlent notre langue (celle du sport, bien sûr). Nous sommes déjà en train de préparer de nouveaux maillots... car nous reviendrons sûrement. Merci de nous avoir traitées comme des joueuses, des amies et des voyageuses à la fois !",
-    "experience_hockey_female_name": "Sophie M., London Ladies HC"
+    "experience_hockey_female_name": "Sophie M., London Ladies HC",
+    "counters_teamsTrustedUs": "Équipes qui nous ont fait confiance",
+    "counters_playersImpacted": "Joueurs impactés",
+    "counters_queriesAnswered": "Questions répondues",
+    "counters_countriesReached": "Pays atteints"
     }
