--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -66,5 +66,9 @@
     "experience_hockey_female_sport": "Hockey Femminile",
     "experience_hockey_female_country": "Regno Unito",
     "experience_hockey_female_story": "Ci siamo divertite tantissimo! È stata una combinazione di competizione, turismo e risate a tutte le ore. Abbiamo giocato partite combattute ma molto divertenti, e fuori dal campo l'attenzione è stata impeccabile. Tutto quello che serve quando si viaggia con un gruppo di donne over 40: buon cibo, letti comodi e qualche piano per brindare a fine giornata. L'organizzazione era fatta da persone che parlano la nostra stessa lingua (quella dello sport, ovviamente). Stiamo già organizzando nuove magliette... perché sicuramente torneremo. Grazie per averci trattato come giocatrici, amiche e viaggiatrici allo stesso tempo!",
-    "experience_hockey_female_name": "Sophie M., London Ladies HC"
+    "experience_hockey_female_name": "Sophie M., London Ladies HC",
+    "counters_teamsTrustedUs": "Squadre che si sono fidate di noi",
+  "counters_playersImpacted": "Giocatori impattati",
+  "counters_queriesAnswered": "Domande risposte",
+  "counters_countriesReached": "Paesi raggiunti"
     }
