--- a/src/locales/nl/translation.json
+++ b/src/locales/nl/translation.json
@@ -67,5 +67,9 @@
     "experience_hockey_female_sport": "Hockey",
     "experience_hockey_female_country": "Verenigd Koninkrijk",
     "experience_hockey_female_story": "We hadden een geweldige tijd! Het was een mengsel van wedstrijd, toerisme en lachjes op elk moment. We hadden intense maar zeer grappige wedstrijden, en buiten het veld de attentie was ongelooflijk. Alles wat je nodig hebt wanneer je reist met een groep vrouwen +40: goede eten, comfortabele bedden en een plan om te borrelen aan het einde van de dag. Georganiseerd door mensen die onzezelfde taal spreken (de sporttaal, natuurlijk). We organiseren al nieuwe shirts... omdat we zeker weten dat we terug zullen gaan. Bedankt voor het behandelen van ons als spelers, vrienden en reizigers op hetzelfde moment!",
-    "experience_hockey_female_name": "Sophie M., London Ladies HC"
+    "experience_hockey_female_name": "Sophie M., London Ladies HC",
+    "counters_teamsTrustedUs": "Teams die ons vertrouwen",
+    "counters_playersImpacted": "Beïnvloede spelers",
+    "counters_queriesAnswered": "Beantwoorde vragen",
+    "counters_countriesReached": "Bereikte landen"
     }
