--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -69,5 +69,9 @@
     "experience_hockey_female_sport": "Hockey Feminino",
     "experience_hockey_female_country": "Reino Unido",
     "experience_hockey_female_story": "Fomos para o torneio... e voltamos com agujetas de tanto reírnos. A organização foi impecável: desde o primeiro e-mail até a última cerveja. Se nota que quem está por trás entende o que é o rugby, o que é um terceiro tempo de verdade e o que precisamos para os veteranos para desfrutar sem pressão. Jogamos partidas intensas mas sem locuras, comimos como reis, e o hotel tinha até lugar para esticar depois dos partidos (embora alguns o usássemos para siestas). Voltaríamos com os olhos fechados. Ah, e ganhamos o prêmio ao time com mais tempo na barra. Merecido.",
-    "experience_hockey_female_name": "Sophie M., London Ladies HC"
+    "experience_hockey_female_name": "Sophie M., London Ladies HC",
+    "counters_teamsTrustedUs": "Equipas que confiaram em nós",
+    "counters_playersImpacted": "Jogadores impactados",
+    "counters_queriesAnswered": "Consultas respondidas",
+    "counters_countriesReached": "Países alcançados"
 }
